<resources>
    <string name="app_name">Spinner Application</string>
    <string name="toast">Toast</string>
    <string name="snackbar">Snack Bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner">Spinner</string>
    <string name="enter_city">Enter City</string>
    <string name="add">ADD</string>
    <string name="enter_your_city">enter city</string>
    <string name="list_view_array_adapter">List View Array Adapter</string>
    <string name="list_view_base_adapter">List View Base Adapter</string>
    <string name="name">NAME</string>
    <string name="Rollno">Roll no</string>
    <string name="base_adapter_with_data_class">Base Adapter With Data Class</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="enter_name">Enter name</string>
    <string name="course">Course</string>
    <string name="roll_no">Roll NO</string>
    <string name="enter_your_roll_no">Enter Your Roll No</string>
    <string name="enter_your_course_name">Enter Your Course Name</string>
    <string name="submit">Submit</string>
    <string name="Do_you_want_to_delete_this_list">Do You Want To Delete This List?</string>
   <string name="course_Name">Course Name</string>
    <string name="enter_roll_no">Enter RollNo</string>
    <string name="enterName">Enter Your Name</string>

    <string-array name="gender">
        <item name="male">Male</item>
        <item name="female">Female</item>
        <item name="other">Other</item>
    </string-array>
    <string-array name="city">City</string-array>

</resources>